flight-gen/FlightParser.js
// Generated from Flight.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var FlightListener = require('./FlightListener').FlightListener;
var grammarFileName = "Flight.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'+'", "'-'", "'=='", "'!='", "'==='", "'!=='", 
                     "'&&'", "'||'", "'*'", "'/'", "'%'", "'*='", "'/='", 
                     "'%='", "'+='", "'-='", "'mut'", "'let'", "'if'", "'else'", 
                     "'func'", "'impure'", "'return'", "'array'", "'<='", 
                     "'>='", "'<'", "'>'", "'=>'", "'{'", "'}'", "'('", 
                     "')'", "'['", "']'", "'!'", "'='", "'.'", "'new'", 
                     "'default'", null, "','", "';'", "':'", "'true'" ];

var symbolicNames = [ null, "Add", "Sub", "Equal", "NotEqual", "EqualStrict", 
                      "NotEqualStrict", "LogicalAnd", "LogicalOr", "Multiply", 
                      "Divide", "Modulo", "MultiplyAssign", "DivideAssign", 
                      "ModuloAssign", "AddAssign", "SubAssign", "Mut", "Let", 
                      "If", "Else", "Function", "Impure", "Return", "Array", 
                      "LessOrEql", "GreaterOrEql", "Less", "Greater", "ArrowFunctionArrow", 
                      "BlockOpen", "BlockClose", "ParameterListOpen", "ParameterListClose", 
                      "ArrayLiteralOpen", "ArrayLiteralClose", "FreezeMarker", 
                      "Assign", "MemberDot", "New", "Default", "Identifier", 
                      "ParameterSeparator", "Terminator", "PropertyAssignSymbol", 
                      "Boolean", "String", "Number", "Whitespace", "MultiLineComment", 
                      "SingleLineComment" ];

var ruleNames =  [ "source", "statement", "block", "statements", "expressionStatement", 
                   "returnStatement", "variableStatement", "variableDeclaration", 
                   "varModifier", "varMutability", "ifStatement", "ifConditionList", 
                   "elseStatement", "functionDeclaration", "singleExpression", 
                   "arrayInitializer", "defaultArrayInitValue", "arrayInitializerArg", 
                   "arrowFunctionArrow", "arrowFunctionParameters", "parameterListOpen", 
                   "parameterListClose", "arrowFunctionBody", "openBlock", 
                   "closeBlock", "aiParameterSeparator", "expressionSequence", 
                   "arrayLiteral", "arrayLiteralOpen", "arrayLiteralClose", 
                   "elementList", "elementListSeparator", "multiply", "divide", 
                   "modulo", "logicalAnd", "logicalOr", "notEqual", "equalStrict", 
                   "notEqualStrict", "assign", "memberDot", "identifierName", 
                   "assignmentOperator", "multiplyAssign", "divideAssign", 
                   "moduloAssign", "addAssign", "subAssign", "objectLiteral", 
                   "propertySeparator", "propertyAssignment", "freezeMarker", 
                   "propertyAssignSymbol", "propertyName", "equal", "less", 
                   "greater", "lessOrEql", "greaterOrEql", "arguments", 
                   "parameterSeparator", "formalParameterList", "formalParameterArg", 
                   "functionBody", "literal", "add", "sub" ];

function FlightParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

FlightParser.prototype = Object.create(antlr4.Parser.prototype);
FlightParser.prototype.constructor = FlightParser;

Object.defineProperty(FlightParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

FlightParser.EOF = antlr4.Token.EOF;
FlightParser.Add = 1;
FlightParser.Sub = 2;
FlightParser.Equal = 3;
FlightParser.NotEqual = 4;
FlightParser.EqualStrict = 5;
FlightParser.NotEqualStrict = 6;
FlightParser.LogicalAnd = 7;
FlightParser.LogicalOr = 8;
FlightParser.Multiply = 9;
FlightParser.Divide = 10;
FlightParser.Modulo = 11;
FlightParser.MultiplyAssign = 12;
FlightParser.DivideAssign = 13;
FlightParser.ModuloAssign = 14;
FlightParser.AddAssign = 15;
FlightParser.SubAssign = 16;
FlightParser.Mut = 17;
FlightParser.Let = 18;
FlightParser.If = 19;
FlightParser.Else = 20;
FlightParser.Function = 21;
FlightParser.Impure = 22;
FlightParser.Return = 23;
FlightParser.Array = 24;
FlightParser.LessOrEql = 25;
FlightParser.GreaterOrEql = 26;
FlightParser.Less = 27;
FlightParser.Greater = 28;
FlightParser.ArrowFunctionArrow = 29;
FlightParser.BlockOpen = 30;
FlightParser.BlockClose = 31;
FlightParser.ParameterListOpen = 32;
FlightParser.ParameterListClose = 33;
FlightParser.ArrayLiteralOpen = 34;
FlightParser.ArrayLiteralClose = 35;
FlightParser.FreezeMarker = 36;
FlightParser.Assign = 37;
FlightParser.MemberDot = 38;
FlightParser.New = 39;
FlightParser.Default = 40;
FlightParser.Identifier = 41;
FlightParser.ParameterSeparator = 42;
FlightParser.Terminator = 43;
FlightParser.PropertyAssignSymbol = 44;
FlightParser.Boolean = 45;
FlightParser.String = 46;
FlightParser.Number = 47;
FlightParser.Whitespace = 48;
FlightParser.MultiLineComment = 49;
FlightParser.SingleLineComment = 50;

FlightParser.RULE_source = 0;
FlightParser.RULE_statement = 1;
FlightParser.RULE_block = 2;
FlightParser.RULE_statements = 3;
FlightParser.RULE_expressionStatement = 4;
FlightParser.RULE_returnStatement = 5;
FlightParser.RULE_variableStatement = 6;
FlightParser.RULE_variableDeclaration = 7;
FlightParser.RULE_varModifier = 8;
FlightParser.RULE_varMutability = 9;
FlightParser.RULE_ifStatement = 10;
FlightParser.RULE_ifConditionList = 11;
FlightParser.RULE_elseStatement = 12;
FlightParser.RULE_functionDeclaration = 13;
FlightParser.RULE_singleExpression = 14;
FlightParser.RULE_arrayInitializer = 15;
FlightParser.RULE_defaultArrayInitValue = 16;
FlightParser.RULE_arrayInitializerArg = 17;
FlightParser.RULE_arrowFunctionArrow = 18;
FlightParser.RULE_arrowFunctionParameters = 19;
FlightParser.RULE_parameterListOpen = 20;
FlightParser.RULE_parameterListClose = 21;
FlightParser.RULE_arrowFunctionBody = 22;
FlightParser.RULE_openBlock = 23;
FlightParser.RULE_closeBlock = 24;
FlightParser.RULE_aiParameterSeparator = 25;
FlightParser.RULE_expressionSequence = 26;
FlightParser.RULE_arrayLiteral = 27;
FlightParser.RULE_arrayLiteralOpen = 28;
FlightParser.RULE_arrayLiteralClose = 29;
FlightParser.RULE_elementList = 30;
FlightParser.RULE_elementListSeparator = 31;
FlightParser.RULE_multiply = 32;
FlightParser.RULE_divide = 33;
FlightParser.RULE_modulo = 34;
FlightParser.RULE_logicalAnd = 35;
FlightParser.RULE_logicalOr = 36;
FlightParser.RULE_notEqual = 37;
FlightParser.RULE_equalStrict = 38;
FlightParser.RULE_notEqualStrict = 39;
FlightParser.RULE_assign = 40;
FlightParser.RULE_memberDot = 41;
FlightParser.RULE_identifierName = 42;
FlightParser.RULE_assignmentOperator = 43;
FlightParser.RULE_multiplyAssign = 44;
FlightParser.RULE_divideAssign = 45;
FlightParser.RULE_moduloAssign = 46;
FlightParser.RULE_addAssign = 47;
FlightParser.RULE_subAssign = 48;
FlightParser.RULE_objectLiteral = 49;
FlightParser.RULE_propertySeparator = 50;
FlightParser.RULE_propertyAssignment = 51;
FlightParser.RULE_freezeMarker = 52;
FlightParser.RULE_propertyAssignSymbol = 53;
FlightParser.RULE_propertyName = 54;
FlightParser.RULE_equal = 55;
FlightParser.RULE_less = 56;
FlightParser.RULE_greater = 57;
FlightParser.RULE_lessOrEql = 58;
FlightParser.RULE_greaterOrEql = 59;
FlightParser.RULE_arguments = 60;
FlightParser.RULE_parameterSeparator = 61;
FlightParser.RULE_formalParameterList = 62;
FlightParser.RULE_formalParameterArg = 63;
FlightParser.RULE_functionBody = 64;
FlightParser.RULE_literal = 65;
FlightParser.RULE_add = 66;
FlightParser.RULE_sub = 67;

function SourceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_source;
    return this;
}

SourceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceContext.prototype.constructor = SourceContext;

SourceContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

SourceContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterSource(this);
	}
};

SourceContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitSource(this);
	}
};




FlightParser.SourceContext = SourceContext;

FlightParser.prototype.source = function() {

    var localctx = new SourceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, FlightParser.RULE_source);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 137;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 18)) & ~0x1f) == 0 && ((1 << (_la - 18)) & ((1 << (FlightParser.Let - 18)) | (1 << (FlightParser.If - 18)) | (1 << (FlightParser.Function - 18)) | (1 << (FlightParser.Impure - 18)) | (1 << (FlightParser.Return - 18)) | (1 << (FlightParser.Array - 18)) | (1 << (FlightParser.BlockOpen - 18)) | (1 << (FlightParser.ParameterListOpen - 18)) | (1 << (FlightParser.ArrayLiteralOpen - 18)) | (1 << (FlightParser.New - 18)) | (1 << (FlightParser.Identifier - 18)) | (1 << (FlightParser.Boolean - 18)) | (1 << (FlightParser.String - 18)) | (1 << (FlightParser.Number - 18)))) !== 0)) {
            this.state = 136;
            this.statements();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

StatementContext.prototype.variableStatement = function() {
    return this.getTypedRuleContext(VariableStatementContext,0);
};

StatementContext.prototype.functionDeclaration = function() {
    return this.getTypedRuleContext(FunctionDeclarationContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.expressionStatement = function() {
    return this.getTypedRuleContext(ExpressionStatementContext,0);
};

StatementContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitStatement(this);
	}
};




FlightParser.StatementContext = StatementContext;

FlightParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, FlightParser.RULE_statement);
    try {
        this.state = 145;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 139;
            this.block();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 140;
            this.variableStatement();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 141;
            this.functionDeclaration();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 142;
            this.ifStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 143;
            this.expressionStatement();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 144;
            this.returnStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.BlockOpen = function() {
    return this.getToken(FlightParser.BlockOpen, 0);
};

BlockContext.prototype.BlockClose = function() {
    return this.getToken(FlightParser.BlockClose, 0);
};

BlockContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitBlock(this);
	}
};




FlightParser.BlockContext = BlockContext;

FlightParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, FlightParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 147;
        this.match(FlightParser.BlockOpen);
        this.state = 149;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 18)) & ~0x1f) == 0 && ((1 << (_la - 18)) & ((1 << (FlightParser.Let - 18)) | (1 << (FlightParser.If - 18)) | (1 << (FlightParser.Function - 18)) | (1 << (FlightParser.Impure - 18)) | (1 << (FlightParser.Return - 18)) | (1 << (FlightParser.Array - 18)) | (1 << (FlightParser.BlockOpen - 18)) | (1 << (FlightParser.ParameterListOpen - 18)) | (1 << (FlightParser.ArrayLiteralOpen - 18)) | (1 << (FlightParser.New - 18)) | (1 << (FlightParser.Identifier - 18)) | (1 << (FlightParser.Boolean - 18)) | (1 << (FlightParser.String - 18)) | (1 << (FlightParser.Number - 18)))) !== 0)) {
            this.state = 148;
            this.statements();
        }

        this.state = 151;
        this.match(FlightParser.BlockClose);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_statements;
    return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;

StatementsContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementsContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterStatements(this);
	}
};

StatementsContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitStatements(this);
	}
};




FlightParser.StatementsContext = StatementsContext;

FlightParser.prototype.statements = function() {

    var localctx = new StatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, FlightParser.RULE_statements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 154; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 153;
            this.statement();
            this.state = 156; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 18)) & ~0x1f) == 0 && ((1 << (_la - 18)) & ((1 << (FlightParser.Let - 18)) | (1 << (FlightParser.If - 18)) | (1 << (FlightParser.Function - 18)) | (1 << (FlightParser.Impure - 18)) | (1 << (FlightParser.Return - 18)) | (1 << (FlightParser.Array - 18)) | (1 << (FlightParser.BlockOpen - 18)) | (1 << (FlightParser.ParameterListOpen - 18)) | (1 << (FlightParser.ArrayLiteralOpen - 18)) | (1 << (FlightParser.New - 18)) | (1 << (FlightParser.Identifier - 18)) | (1 << (FlightParser.Boolean - 18)) | (1 << (FlightParser.String - 18)) | (1 << (FlightParser.Number - 18)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExpressionStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_expressionStatement;
    return this;
}

ExpressionStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionStatementContext.prototype.constructor = ExpressionStatementContext;

ExpressionStatementContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

ExpressionStatementContext.prototype.Terminator = function() {
    return this.getToken(FlightParser.Terminator, 0);
};

ExpressionStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterExpressionStatement(this);
	}
};

ExpressionStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitExpressionStatement(this);
	}
};




FlightParser.ExpressionStatementContext = ExpressionStatementContext;

FlightParser.prototype.expressionStatement = function() {

    var localctx = new ExpressionStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, FlightParser.RULE_expressionStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 158;
        this.singleExpression(0);
        this.state = 159;
        this.match(FlightParser.Terminator);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ReturnStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_returnStatement;
    return this;
}

ReturnStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnStatementContext.prototype.constructor = ReturnStatementContext;

ReturnStatementContext.prototype.Return = function() {
    return this.getToken(FlightParser.Return, 0);
};

ReturnStatementContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

ReturnStatementContext.prototype.Terminator = function() {
    return this.getToken(FlightParser.Terminator, 0);
};

ReturnStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterReturnStatement(this);
	}
};

ReturnStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitReturnStatement(this);
	}
};




FlightParser.ReturnStatementContext = ReturnStatementContext;

FlightParser.prototype.returnStatement = function() {

    var localctx = new ReturnStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, FlightParser.RULE_returnStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 161;
        this.match(FlightParser.Return);
        this.state = 162;
        this.singleExpression(0);
        this.state = 163;
        this.match(FlightParser.Terminator);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_variableStatement;
    return this;
}

VariableStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableStatementContext.prototype.constructor = VariableStatementContext;

VariableStatementContext.prototype.varModifier = function() {
    return this.getTypedRuleContext(VarModifierContext,0);
};

VariableStatementContext.prototype.variableDeclaration = function() {
    return this.getTypedRuleContext(VariableDeclarationContext,0);
};

VariableStatementContext.prototype.Terminator = function() {
    return this.getToken(FlightParser.Terminator, 0);
};

VariableStatementContext.prototype.varMutability = function() {
    return this.getTypedRuleContext(VarMutabilityContext,0);
};

VariableStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterVariableStatement(this);
	}
};

VariableStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitVariableStatement(this);
	}
};




FlightParser.VariableStatementContext = VariableStatementContext;

FlightParser.prototype.variableStatement = function() {

    var localctx = new VariableStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, FlightParser.RULE_variableStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 165;
        this.varModifier();
        this.state = 167;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===FlightParser.Mut) {
            this.state = 166;
            this.varMutability();
        }

        this.state = 169;
        this.variableDeclaration();
        this.state = 170;
        this.match(FlightParser.Terminator);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_variableDeclaration;
    return this;
}

VariableDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableDeclarationContext.prototype.constructor = VariableDeclarationContext;

VariableDeclarationContext.prototype.Identifier = function() {
    return this.getToken(FlightParser.Identifier, 0);
};

VariableDeclarationContext.prototype.Assign = function() {
    return this.getToken(FlightParser.Assign, 0);
};

VariableDeclarationContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

VariableDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.enterVariableDeclaration(this);
	}
};

VariableDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof FlightListener ) {
        listener.exitVariableDeclaration(this);
	}
};




FlightParser.VariableDeclarationContext = VariableDeclarationContext;

FlightParser.prototype.variableDeclaration = function() {

    var localctx = new VariableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, FlightParser.RULE_variableDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 172;
        this.match(FlightParser.Identifier);
        this.state = 175;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===FlightParser.Assign) {
            this.state = 173;
            this.match(FlightParser.Assign);
            this.state = 174;
            this.singleExpression(0);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VarModifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FlightParser.RULE_varModifier;
    return this;
}

VarModifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarModifierContext.prototype.constructor = VarModifierContext;

VarModifierContext.prototype.Let = function() {
    return this.getToken(FlightParser.Let, 0);
};
